# Translator-5

./: .gitignore  gradle.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/libs/: libuvc.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/web/: advanced.html  device.html  doorAccess.html  home.html  index.html  login.html  logout.html  net.html  phone.html  sip.html  sysinfo.html  tslAccess.html
app/src/main/jni/: com_android_face_record_Yuv420POperate.cpp  com_android_face_record_Yuv420POperate.h
app/src/main/res/layout/: activity_access_card_permission.xml  activity_building_information.xml  activity_camera.xml  activity_http.xml  activity_ip_input.xml  activity_main.xml  activity_main_menu.xml  activity_menu_password.xml  activity_open_door_setup.xml  activity_parameter_settings.xml  activity_read_head_setting.xml  activity_register.xml  activity_restore_factory.xml  activity_settings.xml  activity_time_setting.xml  activity_user_information.xml  face_reconize.xml  pic_item.xml  register.xml  register_from_camera.xml  register_from_pic.xml  register_from_video.xml  sip_call.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
linphone/: build.gradle
linphone/src/main/: AndroidManifest.xml
linphone/src/main/res/layout-land/: call.xml  call_incoming.xml  (+4 more)
liveplayer/: CMakeLists.txt  build.gradle
liveplayer/src/main/: AndroidManifest.xml
liveplayer/src/main/jni/yuv_util/: CMakeLists.txt
(+237 files in other folders)
